; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth_ie.c_wpa_add_kde.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth_ie.c_wpa_add_kde.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WLAN_EID_VENDOR_SPECIFIC = common dso_local global i32 0, align 4
@RSN_SELECTOR_LEN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @wpa_add_kde(i32* %0, i32 %1, i32* %2, i64 %3, i32* %4, i64 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i64 %5, i64* %12, align 8
  %13 = load i32, i32* @WLAN_EID_VENDOR_SPECIFIC, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds i32, i32* %14, i32 1
  store i32* %15, i32** %7, align 8
  store i32 %13, i32* %14, align 4
  %16 = load i64, i64* @RSN_SELECTOR_LEN, align 8
  %17 = load i64, i64* %10, align 8
  %18 = add i64 %16, %17
  %19 = load i64, i64* %12, align 8
  %20 = add i64 %18, %19
  %21 = trunc i64 %20 to i32
  %22 = load i32*, i32** %7, align 8
  %23 = getelementptr inbounds i32, i32* %22, i32 1
  store i32* %23, i32** %7, align 8
  store i32 %21, i32* %22, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @RSN_SELECTOR_PUT(i32* %24, i32 %25)
  %27 = load i64, i64* @RSN_SELECTOR_LEN, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 %27
  store i32* %29, i32** %7, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load i64, i64* %10, align 8
  %33 = call i32 @memcpy(i32* %30, i32* %31, i64 %32)
  %34 = load i64, i64* %10, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 %34
  store i32* %36, i32** %7, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = icmp ne i32* %37, null
  br i1 %38, label %39, label %47

39:                                               ; preds = %6
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %11, align 8
  %42 = load i64, i64* %12, align 8
  %43 = call i32 @memcpy(i32* %40, i32* %41, i64 %42)
  %44 = load i64, i64* %12, align 8
  %45 = load i32*, i32** %7, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 %44
  store i32* %46, i32** %7, align 8
  br label %47

47:                                               ; preds = %39, %6
  %48 = load i32*, i32** %7, align 8
  ret i32* %48
}

declare dso_local i32 @RSN_SELECTOR_PUT(i32*, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
